Added favicon to browser tab

--- a/c-panel.html
+++ b/c-panel.html
@@ -60,7 +60,7 @@
                     <span class="text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
                 </a>
             </div>
-            <a href="1index.html" class="text-xs font-bold uppercase tracking-widest">← Буцах</a>
+            <a href="index.html" class="text-xs font-bold uppercase tracking-widest">← Буцах</a>
         </div>
     </nav>
 
