renamed file names

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h3 class="text-2xl font-bold mb-4 italic">1. C-PANEL</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Керамик чулуун гадаргуутай дулаалгатай фасад.</p>
                     <div class="mt-auto">
-                        <a href="2c-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
+                        <a href="c-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
                     </div>
                 </div>
 
@@ -138,7 +138,7 @@
                     <h3 class="text-2xl font-bold mb-4 italic">2. M-PANEL</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Метал гадаргуутай дулаалгатай фасад.</p>
                     <div class="mt-auto">
-                        <a href="3m-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
+                        <a href="m-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
                     </div>
                 </div>
 
@@ -147,7 +147,7 @@
                     <h3 class="text-2xl font-bold mb-4 italic">3. U-PANEL</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Цемент гадаргуутай дулаалгатай фасад.</p>
                     <div class="mt-auto">
-                        <a href="4u-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
+                        <a href="u-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
                     </div>
                 </div>
 
@@ -156,7 +156,7 @@
                     <h3 class="text-2xl font-bold mb-4 italic">4. Гоёлын хүрээ</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Барилгын чимэглэл, цонхны хүрээний.</p>
                     <div class="mt-auto">
-                        <a href="5decor.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
+                        <a href="decor.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
                     </div>
                 </div>
 
