--- a/c-panel.html
+++ b/c-panel.html
@@ -1,9 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="mn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Бүтээгдэхүүн | Art House</title>
+    <link rel="icon" type="image/jpg" href="smalllogo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
