--- a/u-panel.html
+++ b/u-panel.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C-PANEL | Art House</title>
+    <link rel="icon" type="image/jpg" href="smalllogo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
