Updated index and navigation links

--- a/decor.html
+++ b/decor.html
@@ -20,7 +20,7 @@
             <img src="122230477_200333388323215_3279393550184805187_n.jpg" class="h-12 w-auto">
             <span class="font-black italic">ART HOUSE</span>
         </a>
-        <a href="1index.html" class="text-xs font-bold uppercase tracking-widest">← Буцах</a>
+        <a href="index.html" class="text-xs font-bold uppercase tracking-widest">← Буцах</a>
     </nav>
 
     <main class="max-w-7xl mx-auto px-6 py-20">
