added seo, little polish, footer, and more contacts us

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art House | Барилгын Материал</title>
+    
+    <meta name="description" content="Art House - Барилгын гадна талын өндөр чанартай материал, C-Panel, M-Panel нийлүүлэгч.">
+    <meta name="keywords" content="Art House, барилгын материал, C-Panel, M-Panel, фасад, Монгол, arthouse.mn">
+    
     <link rel="icon" type="image/jpg" href="smalllogo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -194,15 +198,15 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-12 max-w-6xl mx-auto px-6">
             <div>
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">Утас</p>
-                <a href="tel:+97600000000" class="text-xl font-black hover:text-slate-500 transition">+976 88112124<br> +976 99234050</a>
+                <a href="tel:+97688112124" class="text-xl font-black hover:text-slate-500 transition">+976 88112124<br> +976 99234050</a>
             </div>
             <div>
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">Фэйсбүүк</p>
-                <a href="#" class="text-xl font-black hover:text-slate-500 transition">Art House Mongolia</a>
+                <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="text-xl font-black hover:text-slate-500 transition">Art House Mongolia</a>
             </div>
             <div>
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">И-Мэйл</p>
-                <a href="mailto:info@arthouse.mn" class="text-xl font-black hover:text-slate-500 transition lowercase">arthousemgl@gmail.com</a>
+                <a href="mailto:arthousemgl@gmail.com" class="text-xl font-black hover:text-slate-500 transition lowercase">arthousemgl@gmail.com</a>
             </div>
             <div>
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">Хаяг</p>
@@ -211,7 +215,7 @@
         </div>
     </section>
 
-    <footer class="py-10 bg-white border-t text-center font-bold text-[10px] uppercase text-slate-400 tracking-widest">© 2026 Art House.</footer>
+    <footer class="py-10 bg-white border-t text-center font-bold text-[10px] uppercase text-slate-400 tracking-widest">© 2026 Art House | arthouse.mn</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
