--- a/m-panel.html
+++ b/m-panel.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Бүтээгдэхүүн | Art House</title>
-    <link rel="icon" type="image/jpg" href="smalllogo.jpg">
+    <title>M-PANEL | Art House</title>
     
+    <meta name="description" content="Art House M-Panel - Метал гадаргуутай дулаалгатай фасад. Цаг хугацаа болон эдийн засагт хэмнэлттэй дэвшилтэт шийдэл.">
+    <meta name="keywords" content="M-Panel, Art House, барилгын материал, метал фасад, дулаалга, Монгол">
+    
+    <link rel="icon" type="image/jpg" href="smalllogo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -58,7 +61,7 @@
     <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-xl border-b border-slate-200 h-20">
         <div class="max-w-7xl mx-auto px-6 h-full flex justify-between items-center">
             <div class="flex items-center h-full">
-                <a href="#" class="flex items-center gap-4 relative">
+                <a href="index.html" class="flex items-center gap-4 relative">
                     <img src="logotransparent.png" alt="Art House Logo" class="h-36 w-auto object-contain drop-shadow-md">
                     <span class="text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
                 </a>
@@ -103,11 +106,28 @@
                     <button onclick="openVideo('https://www.youtube.com/watch?v=cEiedz53kjU')" class="inline-block bg-white text-slate-900 px-10 py-4 font-bold uppercase text-xs tracking-[0.2em] hover:bg-slate-200 transition shadow-xl">Видео үзэх</button>
                 </div>
 
-                <table class="w-full border-collapse text-sm">
+                <table class="w-full border-collapse text-sm mb-12">
                     <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Хэмжээ</td><td class="py-5 text-right font-medium">Сонголтоор</td></tr>
                     <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Хөөсөнцрийн зузаан</td><td class="py-5 text-right font-medium">50мм - 200мм</td></tr>
                     <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Хийцлэл</td><td class="py-5 text-right font-medium">Зориулалтын амалгаа булан</td></tr>
                 </table>
+
+                <div class="mt-12 pt-8 border-t border-slate-200">
+                    <div class="flex flex-row justify-center items-start gap-12 text-center">
+                        <div>
+                            <p class="text-[10px] font-bold text-slate-400 uppercase mb-2 tracking-widest">Фэйсбүүк</p>
+                            <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="text-sm font-black hover:text-slate-500 transition">Art House Mongolia</a>
+                        </div>
+                        <div class="w-[1px] h-12 bg-slate-200 hidden sm:block"></div>
+                        <div>
+                            <p class="text-[10px] font-bold text-slate-400 uppercase mb-2 tracking-widest">Утас</p>
+                            <div class="flex flex-col gap-1">
+                                <a href="tel:+97688112124" class="text-sm font-black hover:text-slate-500 transition">+976 88112124</a>
+                                <a href="tel:+97699234050" class="text-sm font-black hover:text-slate-500 transition">+976 99234050</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="order-1 lg:order-2">
@@ -128,7 +148,7 @@
     </main>
 
     <footer class="py-10 text-center text-[10px] font-bold uppercase text-slate-400 tracking-[0.3em] border-t border-slate-200">
-        © 2026 Art House.
+        © 2026 Art House | arthouse.mn
     </footer>
 
     <script>
