--- a/c-panel.html
+++ b/c-panel.html
@@ -110,16 +110,33 @@
 
                 <div class="mt-12 pt-8 border-t border-slate-200">
                     <div class="flex flex-row justify-center items-start gap-12 text-center">
-                        <div>
-                            <p class="text-[10px] font-bold text-slate-400 uppercase mb-2 tracking-widest">Фэйсбүүк</p>
-                            <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="text-sm font-black hover:text-slate-500 transition">Art House Mongolia</a>
+                        <div class="flex flex-col items-center">
+                            <p class="text-[10px] font-bold text-slate-400 uppercase mb-3 tracking-widest">Фэйсбүүк</p>
+                            <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="flex items-center gap-2 text-sm font-black hover:text-slate-500 transition">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 24 24">
+                                    <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                                </svg>
+                                Art House Mongolia
+                            </a>
                         </div>
+
                         <div class="w-[1px] h-12 bg-slate-200 hidden sm:block"></div>
-                        <div>
-                            <p class="text-[10px] font-bold text-slate-400 uppercase mb-2 tracking-widest">Утас</p>
-                            <div class="flex flex-col gap-1">
-                                <a href="tel:+97688112124" class="text-sm font-black hover:text-slate-500 transition">+976 88112124</a>
-                                <a href="tel:+97699234050" class="text-sm font-black hover:text-slate-500 transition">+976 99234050</a>
+
+                        <div class="flex flex-col items-center">
+                            <p class="text-[10px] font-bold text-slate-400 uppercase mb-3 tracking-widest">Утас</p>
+                            <div class="flex flex-col gap-3">
+                                <a href="tel:+97688112124" class="flex items-center justify-center gap-2 text-sm font-black hover:text-slate-500 transition">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+                                    </svg>
+                                    88112124
+                                </a>
+                                <a href="tel:+97699234050" class="flex items-center justify-center gap-2 text-sm font-black hover:text-slate-500 transition">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                        <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+                                    </svg>
+                                    99234050
+                                </a>
                             </div>
                         </div>
                     </div>
