fixed mobile version things

--- a/c-panel.html
+++ b/c-panel.html
@@ -55,14 +55,15 @@
     </div>
 
     <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-xl border-b border-slate-200 h-20">
-        <div class="max-w-7xl mx-auto px-6 h-full flex justify-between items-center">
-            <div class="flex items-center h-full">
-                <a href="index.html" class="flex items-center gap-4 relative">
-                    <img src="logotransparent.png" alt="Art House Logo" class="h-36 w-auto object-contain drop-shadow-md">
-                    <span class="text-2xl font-black uppercase tracking-widest text-slate-900">Arthouse</span>
-                </a>
-            </div>
-            <a href="index.html" class="text-xs font-bold uppercase tracking-widest">← Буцах</a>
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 h-full flex justify-between items-center">
+            <a href="index.html" class="flex items-center gap-2 sm:gap-4 overflow-hidden">
+                <img src="logotransparent.png" alt="Art House Logo" class="h-24 sm:h-36 w-auto object-contain drop-shadow-md">
+                <span class="text-lg sm:text-2xl font-black uppercase tracking-widest text-slate-900 truncate">Arthouse</span>
+            </a>
+            
+            <a href="index.html" class="shrink-0 text-[10px] font-bold uppercase tracking-widest bg-slate-100 px-3 py-2 rounded-full hover:bg-slate-200 transition">
+                ← <span class="hidden sm:inline">Буцах</span>
+            </a>
         </div>
     </nav>
 
@@ -160,7 +161,7 @@
     </main>
 
     <footer class="py-10 text-center text-[10px] font-bold uppercase text-slate-400 tracking-[0.3em] border-t border-slate-200">
-        © 2026 Art House | arthouse.mn
+        © 2011-2026 Art House | arthouse.mn
     </footer>
 
     <script>
