--- a/index.html
+++ b/index.html
@@ -60,14 +60,28 @@
         .product-card img { transition: transform 0.5s ease; }
         .product-card:hover img { transform: scale(1.05); }
 
-        /* Mobile Menu Animation */
+        /* UPGRADED MOBILE MENU STYLING */
         #mobile-menu {
-            transition: transform 0.3s ease-in-out;
-            transform: translateX(100%);
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            opacity: 0;
+            visibility: hidden;
+            pointer-events: none;
         }
         #mobile-menu.active {
-            transform: translateX(0);
+            opacity: 1;
+            visibility: visible;
+            pointer-events: auto;
         }
+        
+        /* Animated Hamburger to X */
+        .nav-icon { width: 30px; height: 20px; position: relative; cursor: pointer; }
+        .nav-icon span { display: block; position: absolute; height: 3px; width: 100%; background: #0f172a; border-radius: 9px; opacity: 1; left: 0; transition: .25s ease-in-out; }
+        .nav-icon span:nth-child(1) { top: 0px; }
+        .nav-icon span:nth-child(2) { top: 10px; }
+        .nav-icon span:nth-child(3) { top: 20px; }
+        .nav-icon.open span:nth-child(1) { top: 10px; transform: rotate(135deg); }
+        .nav-icon.open span:nth-child(2) { opacity: 0; left: -60px; }
+        .nav-icon.open span:nth-child(3) { top: 10px; transform: rotate(-135deg); }
     </style>
 </head>
 <body class="text-slate-900 font-sans antialiased">
@@ -85,21 +99,32 @@
                 <a href="#about" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1">Бидний тухай</a>
                 <a href="#products" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1">Бүтээгдэхүүн</a>
                 <a href="#work" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1">Бидний ажил</a>
-                <a href="#contact" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1 text-slate-900 uppercase">Холбоо барих</a>
+                <a href="#contact" class="hover:text-slate-500 transition border-b-2 border-transparent hover:border-slate-900 pb-1 text-slate-900 uppercase text-slate-900">Холбоо барих</a>
             </div>
 
-            <button id="menu-toggle" class="md:hidden flex flex-col gap-1.5 z-[110]">
-                <span class="w-8 h-1 bg-slate-900 rounded"></span>
-                <span class="w-8 h-1 bg-slate-900 rounded"></span>
-                <span class="w-8 h-1 bg-slate-900 rounded"></span>
+            <button id="menu-toggle" class="md:hidden z-[110] p-2 focus:outline-none" aria-label="Toggle Menu">
+                <div class="nav-icon" id="nav-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </button>
         </div>
 
-        <div id="mobile-menu" class="fixed inset-0 bg-white z-[105] flex flex-col items-center justify-center space-y-10 text-xl font-black uppercase tracking-widest md:hidden">
-            <a href="#about" onclick="toggleMenu()" class="hover:text-slate-500">Бидний тухай</a>
-            <a href="#products" onclick="toggleMenu()" class="hover:text-slate-500">Бүтээгдэхүүн</a>
-            <a href="#work" onclick="toggleMenu()" class="hover:text-slate-500">Бидний ажил</a>
-            <a href="#contact" onclick="toggleMenu()" class="hover:text-slate-500">Холбоо барих</a>
+        <div id="mobile-menu" class="fixed inset-0 bg-white/95 backdrop-blur-2xl z-[105] flex flex-col items-center justify-center space-y-8 md:hidden">
+            <a href="#about" onclick="closeMenu()" class="text-2xl font-black uppercase tracking-[0.2em] text-slate-900 hover:text-slate-500 transition">Бидний тухай</a>
+            <a href="#products" onclick="closeMenu()" class="text-2xl font-black uppercase tracking-[0.2em] text-slate-900 hover:text-slate-500 transition">Бүтээгдэхүүн</a>
+            <a href="#work" onclick="closeMenu()" class="text-2xl font-black uppercase tracking-[0.2em] text-slate-900 hover:text-slate-500 transition">Бидний ажил</a>
+            <a href="#contact" onclick="closeMenu()" class="text-2xl font-black uppercase tracking-[0.2em] text-slate-900 hover:text-slate-500 transition">Холбоо барих</a>
+            
+            <div class="pt-10 flex gap-6">
+                <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="p-3 bg-slate-900 text-white rounded-full">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                </a>
+                <a href="tel:+97688112124" class="p-3 bg-slate-900 text-white rounded-full">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
+                </a>
+            </div>
         </div>
     </nav>
 
@@ -266,12 +291,22 @@
             breakpoints: { 768: { slidesPerView: 1.2, centeredSlides: true } }
         });
 
-        // Mobile Menu Logic
+        // IMPROVED Mobile Menu Logic
         const menuToggle = document.getElementById('menu-toggle');
+        const navIcon = document.getElementById('nav-icon');
         const mobileMenu = document.getElementById('mobile-menu');
 
         function toggleMenu() {
             mobileMenu.classList.toggle('active');
+            navIcon.classList.toggle('open');
+            // Prevent scrolling when menu is open
+            document.body.style.overflow = mobileMenu.classList.contains('active') ? 'hidden' : 'auto';
+        }
+
+        function closeMenu() {
+            mobileMenu.classList.remove('active');
+            navIcon.classList.remove('open');
+            document.body.style.overflow = 'auto';
         }
 
         menuToggle.addEventListener('click', toggleMenu);
