cpanel actual video

--- a/c-panel.html
+++ b/c-panel.html
@@ -124,7 +124,7 @@
 
                 <div class="p-8 bg-slate-900 text-white rounded-lg mb-10 text-left">
                     <h5 class="text-lg font-bold mb-4 uppercase italic">Бүтээгдэхүүний танилцуулга бичлэг</h5>
-                    <button onclick="openVideo('iB0wypw7iac')" class="inline-block bg-white text-slate-900 px-10 py-4 font-bold uppercase text-xs tracking-[0.2em] hover:bg-slate-200 transition shadow-xl">Видео үзэх</button>
+                    <button onclick="openVideo('qJcZnCbXnqQ')" class="inline-block bg-white text-slate-900 px-10 py-4 font-bold uppercase text-xs tracking-[0.2em] hover:bg-slate-200 transition shadow-xl">Видео үзэх</button>
                 </div>
 
                 <table class="w-full border-collapse text-sm mb-12">
@@ -201,10 +201,6 @@
             e.stopPropagation();
             toggleMenu();
         });
-
-        window.onpopstate = function() {
-            closeMenu();
-        };
 
         function openLightbox(imgSrc) {
             document.getElementById('lightbox-img').src = imgSrc;
