--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         .product-card img { transition: transform 0.5s ease; }
         .product-card:hover img { transform: scale(1.05); }
 
-        /* FIXED MOBILE MENU STYLING */
         #mobile-menu {
             top: 80px;
             height: calc(100vh - 80px);
@@ -87,7 +86,9 @@
 
             <button id="menu-toggle" class="md:hidden z-[120] p-2 focus:outline-none">
                 <div class="nav-icon" id="nav-icon">
-                    <span></span><span></span><span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </button>
         </div>
@@ -244,7 +245,9 @@
             </div>
             <div class="flex flex-col items-center">
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">Хаяг</p>
-                <p class="text-lg font-black leading-tight">Улаанбаатар хот, <br>Баянзүрх дүүрэг, 27-р хороо, Сэлбэ 22 гудамж, 525 тоот </p>
+                <a href="https://maps.app.goo.gl/Mw1sTUbwMHzagqoQ9" target="_blank" class="hover:text-slate-500 transition">
+                    <p class="text-lg font-black leading-tight">Улаанбаатар хот, <br>Баянзүрх дүүрэг, 27-р хороо, Сэлбэ 22 гудамж, 525 тоот </p>
+                </a>
             </div>
         </div>
     </section>
