--- a/m-panel.html
+++ b/m-panel.html
@@ -73,7 +73,7 @@
         <div class="grid lg:grid-cols-2 gap-16">
             
             <div class="order-2 lg:order-1">
-                <h1 class="text-6xl font-black uppercase mb-6 italic">M-PANEL</h1>
+                <h1 class="text-6xl font-black uppercase mb-6">M-PANEL</h1>
                 <p class="text-xl text-slate-600 mb-10 leading-relaxed">
                     M-Panel нь барилгын метал нүүртэй дулаалгатай фасад бөгөөд энэхүү фасад нь цаг хугацаа болон эдийн засгийн хэмнэлтэй байх шинэ бүтээгдэхүүн юм.
                 </p>
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="p-8 bg-slate-900 text-white rounded-lg mb-10 text-left">
-                    <h5 class="text-lg font-bold mb-4 uppercase italic">Бүтээгдэхүүний танилцуулга бичлэг</h5>
+                    <h5 class="text-lg font-bold mb-4 uppercase">Бүтээгдэхүүний танилцуулга бичлэг</h5>
                     <button onclick="openVideo('cEiedz53kjU')" class="inline-block bg-white text-slate-900 px-10 py-4 font-bold uppercase text-xs tracking-[0.2em] hover:bg-slate-200 transition shadow-xl">Видео үзэх</button>
                 </div>
 
