--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
                     <span class="h-[2px] w-16 bg-slate-900"></span>
                     <span class="text-sm font-bold uppercase tracking-[0.4em] text-slate-500">Бидний Алсын Хараа</span>
                 </div>
-                <h1 class="text-6xl md:text-8xl font-black mb-10 leading-[0.85] uppercase italic text-slate-900">
-                    Art House <br><span class="text-slate-400 not-italic">Барилгын</span> <br>Материал.
+                <h1 class="text-5xl md:text-7xl font-black mb-10 leading-[0.9] uppercase text-slate-900">
+                    Art House <br><span class="text-slate-400">Барилгын</span> <br>
+                    <span class="text-4xl md:text-5xl inline-block mt-2">
+                        •Фасад <br>•Дулаалга <br>•Чимэглэл
+                    </span>
                 </h1>
-                <p class="text-2xl text-slate-600 max-w-2xl mb-12 leading-relaxed">
+                <p class="text-lg text-slate-600 max-w-xl mb-12 leading-relaxed">
                     Бид барилгын гадна талын өндөр чанартай материал, шийдлүүдийг мэргэжлийн түвшинд нийлүүлдэг. Архитектурын алсын харааг бодит бүтээц болгох хамгийн найдвартай гүүр нь бид юм. Чанар бол бидний үндсэн зарчим.
                 </p>
                 <div class="flex flex-wrap gap-16 border-t border-slate-200 pt-12">
@@ -142,7 +145,7 @@
 
     <section id="products" class="relative py-32 bg-slate-900 text-white clip-path-diag">
         <div class="max-w-7xl mx-auto px-6">
-            <h2 class="text-5xl font-black uppercase italic tracking-tighter mb-20">Манай Бүтээгдэхүүн</h2>
+            <h2 class="text-5xl font-black uppercase italic tracking-tighter mb-20">Бүтээгдэхүүн</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 
                 <div class="product-card bg-slate-800 p-4 rounded shadow-lg flex flex-col h-full">
@@ -173,9 +176,9 @@
                 </div>
 
                 <div class="product-card bg-slate-800 p-4 rounded shadow-lg flex flex-col h-full">
-                    <img src="https://images.unsplash.com/photo-1534237710431-e2fc698436d0?auto=format&fit=crop&q=80&w=800" class="w-full h-60 object-cover mb-6">
+                    <img src="decormain.jpg" class="w-full h-60 object-cover mb-6">
                     <h3 class="text-2xl font-bold mb-4 italic">4. Гоёлын хүрээ</h3>
-                    <p class="text-slate-400 text-sm mb-6 leading-relaxed">Барилгын чимэглэл, цонхны хүрээний.</p>
+                    <p class="text-slate-400 text-sm mb-6 leading-relaxed">Барилгын чимэглэл, цонхны хүрээ.</p>
                     <div class="mt-auto">
                         <a href="decor.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
                     </div>
