--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="lg:col-span-7 z-10">
                 <div class="inline-flex items-center gap-2 mb-8">
                     <span class="h-[2px] w-16 bg-slate-900"></span>
-                    <span class="text-sm font-bold uppercase tracking-[0.4em] text-slate-500">Бидний Алсын Хараа</span>
+                    <span class="text-sm font-bold uppercase tracking-[0.4em] text-slate-500">Бидний Тухай</span>
                 </div>
                 <h1 class="text-5xl md:text-7xl font-black mb-10 leading-[0.9] uppercase text-slate-900">
                     Art House <br><span class="text-slate-400">Барилгын</span> <br>
@@ -167,7 +167,7 @@
                 </div>
 
                 <div class="product-card bg-slate-800 p-4 rounded shadow-lg flex flex-col h-full">
-                    <img src="https://images.unsplash.com/photo-1495033158763-d62f3299c1a3?auto=format&fit=crop&q=80&w=800" class="w-full h-60 object-cover mb-6">
+                    <img src="COMING SOON.png" class="w-full h-60 object-cover mb-6">
                     <h3 class="text-2xl font-bold mb-4 italic">3. U-PANEL</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Цемент гадаргуутай дулаалгатай фасад.</p>
                     <div class="mt-auto">
