--- a/u-panel.html
+++ b/u-panel.html
@@ -71,21 +71,20 @@
                 </div>
 
                 <table class="w-full border-collapse text-sm mb-12">
-                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Хэмжээ</td><td class="py-5 text-right font-medium">H600mm x L900mm x 7mm</td></tr>
-                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Хөөсөнцрийн зузаан</td><td class="py-5 text-right font-medium">50мм - 200мм</td></tr>
-                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">Насжилт</td><td class="py-5 text-right font-medium">30-с дээш жил</td></tr>
+                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">-</td><td class="py-5 text-right font-medium">-</td></tr>
+                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">-</td><td class="py-5 text-right font-medium">-</td></tr>
+                    <tr class="border-b border-slate-300"><td class="py-5 font-bold uppercase text-slate-400">-</td><td class="py-5 text-right font-medium">-</td></tr>
                 </table>
             </div>
 
             <div class="order-1 lg:order-2">
-                <div class="relative group cursor-zoom-in" onclick="openLightbox('c-panel1.jpg')">
-                    <img src="c-panel1.jpg" class="mb-6 w-full shadow-2xl rounded-sm">
+                <div class="relative group cursor-zoom-in" onclick="openLightbox('COMING SOON.png')">
+                    <img src="COMING SOON.png" class="mb-6 w-full shadow-2xl rounded-sm">
                 </div>
                 <div class="grid grid-cols-3 gap-4">
-                    <img src="cpanel5.jpg" onclick="openLightbox('cpanel5.jpg')" class="h-24 w-full object-cover cursor-pointer rounded-sm shadow-sm">
-                    <img src="cpanel4.jpg" onclick="openLightbox('cpanel4.jpg')" class="h-24 w-full object-cover cursor-pointer rounded-sm shadow-sm">
-                    <img src="tugjeecp.jpeg" onclick="openLightbox('tugjeecp.jpeg')" class="h-24 w-full object-cover cursor-pointer rounded-sm shadow-sm">
-                </div>
+                    <img src="COMING SOON.png" onclick="openLightbox('COMING SOON.png')" class="h-24 w-full object-cover cursor-pointer rounded-sm shadow-sm">
+                    <img src="COMING SOON.png" onclick="openLightbox('COMING SOON.png')" class="h-24 w-full object-cover cursor-pointer rounded-sm shadow-sm">
+                    <img src="COMING SOON.png" onclick="openLightbox('COMING SOON.png')" class="h-24 w-full object-cover cursor-pointer rounded-sm shadow-sm">
             </div>
         </div>
     </main>
