--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </section>
 
     <section id="work" class="py-32 max-w-7xl mx-auto px-6">
-        <h2 class="text-4xl font-black uppercase italic mb-16">Бидний Гүйцэтгэсэн Ажил</h2>
+        <h2 class="text-4xl font-black uppercase italic mb-16">Бидний Ажил</h2>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide aspect-video">
