--- a/index.html
+++ b/index.html
@@ -184,15 +184,26 @@
                     <a href="baganuur1.html" class="block w-full h-full">
                         <img src="baganuurmain.png" class="w-full h-full object-cover">
                         <div class="project-overlay absolute inset-0 p-10 text-white">
-                            <p class="text-lg font-bold italic tracking-wide">📍 Багануур | 🏗️ Ашигласан: C-PANEL</p>
+                            <p class="text-lg font-bold italic tracking-wide">C-PANEL</p>
                         </div>
                     </a>
                 </div> 
                 <div class="swiper-slide aspect-video relative">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1200" class="w-full h-full object-cover">
+                    <img src="Mpanelcover.png" class="w-full h-full object-cover">
                     <div class="project-overlay absolute inset-0 p-10 text-white">
-                        <h4 class="text-2xl font-bold uppercase mb-2 italic">Үйлдвэрийн Барилга</h4>
-                        <p class="text-lg font-bold italic tracking-wide">📍 Дархан | 🏗️ Ашигласан: M-PANEL</p>
+                        <p class="text-lg font-bold italic tracking-wide">M-PANEL</p>
+                    </div>
+                </div>
+                <div class="swiper-slide aspect-video relative">
+                    <img src="COMING SOON.png" class="w-full h-full object-cover">
+                    <div class="project-overlay absolute inset-0 p-10 text-white">
+                        <p class="text-lg font-bold italic tracking-wide">U-PANEL</p>
+                    </div>
+                </div>
+                <div class="swiper-slide aspect-video relative">
+                    <img src="decorcover.png" class="w-full h-full object-cover">
+                    <div class="project-overlay absolute inset-0 p-10 text-white">
+                        <p class="text-lg font-bold italic tracking-wide">Гоёлын хүрээ</p>
                     </div>
                 </div>
             </div>
