--- a/baganuur1.html
+++ b/baganuur1.html
@@ -52,7 +52,7 @@
                     </span>
                 </a>
             </div>
-            <a href="index.html#work" class="text-xs font-bold uppercase tracking-widest">← Буцах</a>
+            <a href="index.html" class="text-xs font-bold uppercase tracking-widest">← Буцах</a>
         </div>
     </nav>
 
@@ -81,17 +81,65 @@
                 <div class="gallery-card shadow-lg" onclick="openProject('project1')">
                     <img src="baganuurblock1.png" class="gallery-img">
                     <div class="absolute bottom-4 left-4 text-white pointer-events-none">
-                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Багануур дүүрэг</p>
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Багануур</p>
                     </div>
                 </div>
-                <div class="gallery-card shadow-lg" onclick="openProject('project2')"><img src="project2.jpg" class="gallery-img"></div>
-                <div class="gallery-card shadow-lg" onclick="openProject('project3')"><img src="project3.jpg" class="gallery-img"></div>
-                <div class="gallery-card shadow-lg" onclick="openProject('project4')"><img src="project4.jpg" class="gallery-img"></div>
-                <div class="gallery-card shadow-lg" onclick="openProject('project5')"><img src="project5.jpg" class="gallery-img"></div>
-                <div class="gallery-card shadow-lg" onclick="openProject('project6')"><img src="project6.jpg" class="gallery-img"></div>
-                <div class="gallery-card shadow-lg" onclick="openProject('project7')"><img src="project7.jpg" class="gallery-img"></div>
-                <div class="gallery-card shadow-lg" onclick="openProject('project8')"><img src="project8.jpg" class="gallery-img"></div>
-                <div class="gallery-card shadow-lg" onclick="openProject('project9')"><img src="project9.jpg" class="gallery-img"></div>
+
+                <div class="gallery-card shadow-lg" onclick="openProject('project2')">
+                    <img src="tunhelblock.png" class="gallery-img">
+                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Түнхэл</p>
+                    </div>
+                </div>
+
+                <div class="gallery-card shadow-lg" onclick="openProject('project3')">
+                    <img src="project3.jpg" class="gallery-img">
+                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 3</p>
+                    </div>
+                </div>
+
+                <div class="gallery-card shadow-lg" onclick="openProject('project4')">
+                    <img src="project4.jpg" class="gallery-img">
+                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 4</p>
+                    </div>
+                </div>
+
+                <div class="gallery-card shadow-lg" onclick="openProject('project5')">
+                    <img src="project5.jpg" class="gallery-img">
+                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 5</p>
+                    </div>
+                </div>
+
+                <div class="gallery-card shadow-lg" onclick="openProject('project6')">
+                    <img src="project6.jpg" class="gallery-img">
+                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 6</p>
+                    </div>
+                </div>
+
+                <div class="gallery-card shadow-lg" onclick="openProject('project7')">
+                    <img src="project7.jpg" class="gallery-img">
+                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 7</p>
+                    </div>
+                </div>
+
+                <div class="gallery-card shadow-lg" onclick="openProject('project8')">
+                    <img src="project8.jpg" class="gallery-img">
+                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 8</p>
+                    </div>
+                </div>
+
+                <div class="gallery-card shadow-lg" onclick="openProject('project9')">
+                    <img src="project9.jpg" class="gallery-img">
+                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 9</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -127,7 +175,7 @@
 
         const projectImages = {
             project1: ['baganuurmain.png', 'baganuur2.png', 'baganuur3.png', 'baganuur4.png', 'baganuur5.png'],
-            project2: ['project2.jpg', 'p2-2.jpg', 'p2-3.jpg', 'p2-4.jpg', 'p2-5.jpg'],
+            project2: ['tunhel1.png', 'tunhel2.png', 'tunhel3.png', 'tunhel4.png', 'tunhel5.png'],
             project3: ['project3.jpg', 'p3-2.jpg', 'p3-3.jpg', 'p3-4.jpg', 'p3-5.jpg'],
             project4: ['project4.jpg', 'p4-2.jpg', 'p4-3.jpg', 'p4-4.jpg', 'p4-5.jpg'],
             project5: ['project5.jpg', 'p5-2.jpg', 'p5-3.jpg', 'p5-4.jpg', 'p5-5.jpg'],
