--- a/baganuur1.html
+++ b/baganuur1.html
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="gallery-card shadow-lg" onclick="openProject('project3')">
-                    <img src="project3.jpg" class="gallery-img">
+                    <img src="uvsblock.png" class="gallery-img">
                     <div class="absolute bottom-4 left-4 text-white pointer-events-none">
                         <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 3</p>
                     </div>
@@ -176,7 +176,7 @@
         const projectImages = {
             project1: ['baganuurmain.png', 'baganuur2.png', 'baganuur3.png', 'baganuur4.png', 'baganuur5.png'],
             project2: ['tunhel1.png', 'tunhel2.png', 'tunhel3.png', 'tunhel4.png', 'tunhel5.png'],
-            project3: ['project3.jpg', 'p3-2.jpg', 'p3-3.jpg', 'p3-4.jpg', 'p3-5.jpg'],
+            project3: ['uvs1.png', 'uvs2.png', 'uvs3.png'],
             project4: ['project4.jpg', 'p4-2.jpg', 'p4-3.jpg', 'p4-4.jpg', 'p4-5.jpg'],
             project5: ['project5.jpg', 'p5-2.jpg', 'p5-3.jpg', 'p5-4.jpg', 'p5-5.jpg'],
             project6: ['project6.jpg', 'p6-2.jpg', 'p6-3.jpg', 'p6-4.jpg', 'p6-5.jpg'],
