--- a/baganuur1.html
+++ b/baganuur1.html
@@ -107,37 +107,23 @@
                 </div>
 
                 <div class="gallery-card shadow-lg" onclick="openProject('project5')">
-                    <img src="project5.jpg" class="gallery-img">
+                    <img src="nukhtblock.png" class="gallery-img">
                     <div class="absolute bottom-4 left-4 text-white pointer-events-none">
-                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 5</p>
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Нүхт</p>
                     </div>
                 </div>
 
                 <div class="gallery-card shadow-lg" onclick="openProject('project6')">
-                    <img src="project6.jpg" class="gallery-img">
+                    <img src="5nbuudalblock.png" class="gallery-img">
                     <div class="absolute bottom-4 left-4 text-white pointer-events-none">
-                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 6</p>
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">5-н Буудал</p>
                     </div>
                 </div>
 
                 <div class="gallery-card shadow-lg" onclick="openProject('project7')">
-                    <img src="project7.jpg" class="gallery-img">
+                    <img src="busadblock.png" class="gallery-img">
                     <div class="absolute bottom-4 left-4 text-white pointer-events-none">
-                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 7</p>
-                    </div>
-                </div>
-
-                <div class="gallery-card shadow-lg" onclick="openProject('project8')">
-                    <img src="project8.jpg" class="gallery-img">
-                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
-                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 8</p>
-                    </div>
-                </div>
-
-                <div class="gallery-card shadow-lg" onclick="openProject('project9')">
-                    <img src="project9.jpg" class="gallery-img">
-                    <div class="absolute bottom-4 left-4 text-white pointer-events-none">
-                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Төсөл 9</p>
+                        <p class="text-[10px] font-bold uppercase tracking-widest bg-black/50 px-2 py-1 inline-block">Бусад</p>
                     </div>
                 </div>
             </div>
@@ -178,11 +164,9 @@
             project2: ['tunhel1.png', 'tunhel2.png', 'tunhel3.png', 'tunhel4.png', 'tunhel5.png'],
             project3: ['uvs1.png', 'uvs2.png', 'uvs3.png'],
             project4: ['2nalaikh1.png', '2nalaikh2.png', '2nalaikh3.png', '2nalaikh4.png'],
-            project5: ['project5.jpg', 'p5-2.jpg', 'p5-3.jpg', 'p5-4.jpg', 'p5-5.jpg'],
-            project6: ['project6.jpg', 'p6-2.jpg', 'p6-3.jpg', 'p6-4.jpg', 'p6-5.jpg'],
-            project7: ['project7.jpg', 'p7-2.jpg', 'p7-3.jpg', 'p7-4.jpg', 'p7-5.jpg'],
-            project8: ['project8.jpg', 'p8-2.jpg', 'p8-3.jpg', 'p8-4.jpg', 'p8-5.jpg'],
-            project9: ['project9.jpg', 'p9-2.jpg', 'p9-3.jpg', 'p9-4.jpg', 'p9-5.jpg']
+            project5: ['nukht1.png', 'nukht2.png', 'nukht3.png', 'nukht4.png'],
+            project6: ['5nbuudal1.png', '5nbuudal2.png', '5nbuudal3.png'],
+            project7: ['busad1.png', 'busad2.png', 'busad3.png', 'busad4.png'],
         };
 
         function openProject(projectId) {
