--- a/index.html
+++ b/index.html
@@ -180,11 +180,13 @@
             </div> 
 
             <div class="work-card relative aspect-square md:aspect-video overflow-hidden group cursor-pointer shadow-lg">
-                <img src="Mpanelcover.png" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
-                <div class="work-overlay absolute inset-0 flex items-center justify-center text-center p-4">
-                    <p class="text-xl md:text-4xl font-black uppercase italic tracking-widest text-white">M-PANEL</p>
-                </div>
-            </div>
+                <a href="mpanelwork.html" class="block w-full h-full">
+                    <img src="Mpanelcover.png" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
+                    <div class="work-overlay absolute inset-0 flex items-center justify-center text-center p-4">
+                        <p class="text-xl md:text-4xl font-black uppercase italic tracking-widest text-white">M-PANEL</p>
+                    </div>
+                </a>
+            </div> 
 
             <div class="work-card relative aspect-square md:aspect-video overflow-hidden group cursor-pointer shadow-lg">
                 <img src="blanknavy.png" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
